Minor fixes in spanish translation of ch03

--- a/03-SummarizingData.Rmd
+++ b/03-SummarizingData.Rmd
@@ -37,7 +37,7 @@ Una razón por la que resumimos datos es porque nos provee de una manera de *gen
 Les psicólogues han estudiado por largo tiempo todas las maneras en que la generalización es central al pensamiento. Un ejemplo es la categorización: somos capaces de reconocer fácilmente diferentes ejemplos de la categoría de "aves" a pesar de que los ejemplos individuales puedan ser muy diferentes en características superficiales (como un avestruz, un petirrojo, y una gallina). De manera importante, la generalización nos permite hacer predicciones acerca de estos individuos -- en el caso de las aves, podemos predecir que vuelan y comen semillas, y que probablemente no puedan manejar un carro o hablar inglés. Estas predicciones no serán siempre correctas, pero frecuentemente serán suficientemente buenas para ser útiles en el mundo.
 
 <!-- ## Summarizing data using tables -->
-## Resumiendo datos usando tablas
+## Resumir datos usando tablas
 
 <!-- A simple way to summarize data is to generate a table representing counts of various types of observations.  This type of table has been used for thousands of years (see Figure \@ref(fig:salesContract)). -->
 Una manera simple de resumir datos es el generar una tabla que represente el conteo de varios tipos de observaciones. Este tipo de tabla ha sido usado durante miles de años (ve la Figura \@ref(fig:salesContract)).
@@ -63,7 +63,7 @@ NHANES <-
 ```
 
 <!-- Let's look at some examples of the use of tables, using a more realistic dataset.  Throughout this book we will use the [National Health and Nutrition Examination Survey (NHANES)](https://www.cdc.gov/nchs/nhanes/index.htm) dataset.  This is an ongoing study that assesses the health and nutrition status of a sample of individuals from the United States on many different variables.  We will use a version of the dataset that is available for the R statistical software package.   For this example, we will look at a simple variable, called "PhysActive" in the dataset.  This variable contains one of three different values: "Yes" or "No" (indicating whether or not the person reports doing "moderate or vigorous-intensity sports, fitness or recreational activities"), or "NA" if the data are missing for that individual. There are different reasons that the data might be missing; for example, this question was not asked of children younger than 12 years of age, while in other cases an adult may have declined to answer the question during the interview, or the interviewer's recording of the answer on their form might be unreadable. -->
-Veamos algunos ejemplos del uso de tablas, usando un conjunto de datos más realista. A lo largo de este libro usaremos la base de datos de la [Encuesta Nacional de Nutrición y Salud (National Health and Nutrition Examination Survey, NHANES)](https://www.cdc.gov/nchs/nhanes/index.htm). Este es un estudio en curso que evalúa el status de salud y nutrición de una muestra de individuos de los Estados Unidos en múltiples variables diferentes. Aquí usaremos una versión de la base de datos que está disponible para el paquete de software estadístico R.  Para este ejemplo, miraremos una variable simple llamada "PhysActive" en la base de datos. Esta variable contiene uno de tres diferentes valores: "Sí" o "No" (indicando si la persona reportó o no el hacer "deportes moderados o de intensidad vigorosa, actividades de fitness o recreacionales"), o "NA" si el dato está perdido para ese individuo. Existen varias razones por las cuales el dato podría estar perdido; por ejemplo, esta pregunta no se le realizó a niños menores a 12 años, mientras que en otros casos un adulto podría haber declinado el contestar la pregunta durante la entrevista, o el registro de la respuesta realizado por quien entrevistó podría resultar ilegible.
+Veamos algunos ejemplos del uso de tablas, usando un conjunto de datos más realista. A lo largo de este libro usaremos la base de datos de la [Encuesta Nacional de Nutrición y Salud (*National Health and Nutrition Examination Survey, NHANES*)](https://www.cdc.gov/nchs/nhanes/index.htm). Este es un estudio en curso que evalúa el status de salud y nutrición de una muestra de personas de los Estados Unidos en múltiples variables diferentes. Aquí usaremos una versión de la base de datos que está disponible para el paquete de software estadístico R.  Para este ejemplo, miraremos una variable simple llamada "PhysActive" en la base de datos. Esta variable contiene uno de tres diferentes valores: "Sí" o "No" (indicando si la persona reportó o no el hacer "deportes moderados o de intensidad vigorosa, actividades de fitness o recreacionales"), o "NA" si el dato está perdido para esa persona. Existen varias razones por las cuales el dato podría estar perdido; por ejemplo, esta pregunta no se le realizó a menores a 12 años, mientras que en otros casos una persona adulta podría haber declinado el contestar la pregunta durante la entrevista, o el registro de la respuesta realizado por quien entrevistó podría resultar ilegible.
 
 <!-- ### Frequency distributions  {#frequency-distributions} -->
 ### Distribuciones de frecuencias  {#frequency-distributions}
@@ -89,7 +89,7 @@ kable(PhysActive_table, digits=3, caption="Distribución de frecuencias de la va
 ```
 
 <!-- Table \@ref(tab:PhysActiveTable) table shows the frequencies of each of the different values; there were `r I(PhysActive_table %>% subset(PhysActive=='No') %>% dplyr::select(AbsoluteFrequency))` individuals who responded "No" to the question, `r I(PhysActive_table %>% subset(PhysActive=='Yes') %>% dplyr::select(AbsoluteFrequency))` who responded "Yes", and `r I(PhysActive_table %>% subset(is.na(PhysActive)) %>% dplyr::select(AbsoluteFrequency))` for whom no response was given.  We call this a *frequency distribution* because it tells us how frequent each of the possible values is within our sample. -->
-La tabla \@ref(tab:PhysActiveTable) muestra las frecuencias de cada uno de los diferentes valores; había `r I(PhysActive_table %>% subset(PhysActive=='No') %>% dplyr::select(AbsoluteFrequency))` individuos que respondieron "No" a la pregunta, `r I(PhysActive_table %>% subset(PhysActive=='Yes') %>% dplyr::select(AbsoluteFrequency))` que respondieron "Sí", y `r I(PhysActive_table %>% subset(is.na(PhysActive)) %>% dplyr::select(AbsoluteFrequency))` de quienes no hubo una respuesta.  Llamamos a esto una *distribución de frecuencias* porque nos dice qué tan frecuente sucede en nuestra muestra cada uno de los valores posibles. 
+La tabla \@ref(tab:PhysActiveTable) muestra las frecuencias de cada uno de los diferentes valores; había `r I(PhysActive_table %>% subset(PhysActive=='No') %>% dplyr::select(AbsoluteFrequency))` personas que respondieron "No" a la pregunta, `r I(PhysActive_table %>% subset(PhysActive=='Yes') %>% dplyr::select(AbsoluteFrequency))` que respondieron "Sí", y `r I(PhysActive_table %>% subset(is.na(PhysActive)) %>% dplyr::select(AbsoluteFrequency))` de quienes no hubo una respuesta.  Llamamos a esto una *distribución de frecuencias* porque nos dice qué tan frecuente sucede en nuestra muestra cada uno de los valores posibles. 
 
 <!-- This shows us the absolute frequency of each of the different values, for everyone who actually gave a response. We can see from this that there are more people saying "Yes" than "No", but it can be hard to tell from absolute numbers how big the difference is in relative terms.  For this reason, we often would rather present the data using *relative frequency*, which is obtained by dividing each frequency by the sum of all frequencies: -->
 Esto nos muestra la frecuencia absoluta de cada una de los diferentes valores, para todas las personas que sí dieron una respuesta. De esta información, podemos ver que hubo más personas respondiendo "Sí" que "No", pero puede ser difícil ver qué tan grande es la diferencia relativa sólo viendo estos números absolutos. Por esta razón, frecuentemente preferimos presentar los datos usando *frecuencias relativas*, que se obtienen dividiendo cada frecuencia entre la suma de todas las frecuencias absolutas:
@@ -99,7 +99,7 @@ $$
 frecuencia\ relativa_i = \frac{frecuencia\ absoluta_i}{\sum_{j=1}^N frecuencia\ absoluta_j}
 $$
 <!-- The relative frequency provides a much easier way to see how big the imbalance is.  We can also interpret the relative frequencies as percentages by multiplying them by 100. In this example, we will drop the NA values as well, since we would like to be able to interpret the relative frequencies of active versus inactive people. However, for this to make sense we have to assume that the NA values are missing "at random", meaning that their presence or absence is not related to the true value of the variable for that person. For example, if inactive participants were more likely to refuse to answer the question than active participants, then that would *bias* our estimate of the frequency of physical activity, meaning that our estimate would be different from the true value. -->
-La frecuencia relativa provee una manera mucho más fácil para observar qué tan grande es la diferencia. También podemos interpretar las frecuencias relativas como porcentajes si las multiplicamos por 100. En este ejemplo, quitaremos los valores NA, porque nos gustaría poder interpretar las frecuencias relativas de las personas físicamente activas versus las inactivas. Sin embargo, para que esto tenga sentido tendríamos que asumir que los valores "NA" están perdidos de manera "aleatoria", significando que su presencia o ausencia no está relacionada con el verdadero valor de la variable para esa persona.  Por ejemplo, si los participantes inactivos tuvieran mayor probabilidad de rehusarse a contestar la pregunta que los participantes activos, entonces eso *sesgaría* nuestra estimación de la frecuencia de la actividad física, lo que significaría que nuestra estimación sería diferente del valor verdadero.
+La frecuencia relativa provee una manera mucho más fácil para observar qué tan grande es la diferencia. También podemos interpretar las frecuencias relativas como porcentajes si las multiplicamos por 100. En este ejemplo, quitaremos los valores NA, porque nos gustaría poder interpretar las frecuencias relativas de las personas físicamente activas versus las inactivas. Sin embargo, para que esto tenga sentido tendríamos que asumir que los valores "NA" están perdidos de manera "aleatoria", significando que su presencia o ausencia no está relacionada con el verdadero valor de la variable para esa persona.  Por ejemplo, si los participantes inactivos tuvieran mayor probabilidad de rehusarse a contestar la pregunta que los participantes activos, entonces eso *sesgaría* nuestra estimación de la frecuencia de la actividad física, lo que significa que nuestra estimación sería diferente del valor verdadero.
 
 ```{r echo=FALSE}
 # compute percentages for physical activity categories
@@ -124,7 +124,7 @@ kable(PhysActive_table_filtered, caption='Frecuencias absolutas y relativas, y p
 ```
 
 <!-- Table \@ref(tab:PhysActiveTableFiltered) lets us see that `r formatC(I(PhysActive_table_filtered %>% subset(PhysActive=='No') %>% dplyr::select(Percentage) %>% pull()), digits=1, format='f')` percent of the individuals in the NHANES sample said "No" and `r formatC(I(PhysActive_table_filtered %>% subset(PhysActive=='Yes') %>% dplyr::select(Percentage) %>% pull()), digits=1, format='f')` percent said "Yes". -->
-La tabla \@ref(tab:PhysActiveTableFiltered) nos deja ver que el `r formatC(I(PhysActive_table_filtered %>% subset(PhysActive=='No') %>% dplyr::select(Percentage) %>% pull()), digits=1, format='f')` por ciento de los individuos en la muestra NHANES dijo "No" y el `r formatC(I(PhysActive_table_filtered %>% subset(PhysActive=='Yes') %>% dplyr::select(Percentage) %>% pull()), digits=1, format='f')` por ciento dijo "Sí".
+La Tabla \@ref(tab:PhysActiveTableFiltered) nos deja ver que el `r formatC(I(PhysActive_table_filtered %>% subset(PhysActive=='No') %>% dplyr::select(Percentage) %>% pull()), digits=1, format='f')` porciento de los individuos en la muestra NHANES dijo "No" y el `r formatC(I(PhysActive_table_filtered %>% subset(PhysActive=='Yes') %>% dplyr::select(Percentage) %>% pull()), digits=1, format='f')` porciento dijo "Sí".
 
 <!-- ### Cumulative distributions {#cumulative-distributions} -->
 ### Distribuciones acumuladas {#cumulative-distributions}
@@ -133,7 +133,7 @@ La tabla \@ref(tab:PhysActiveTableFiltered) nos deja ver que el `r formatC(I(Phy
 La variable PhysActive que revisamos arriba sólo tenía dos valores posibles, pero frecuentemente queremos resumir datos que pueden tener más valores posibles. Cuando esos valores son cuantitativos, entonces una manera útil de resumirlos es a través de lo que llamamos una representación de frecuencias *acumuladas*: en lugar de preguntarnos cuántas observaciones toman un valor específico, nos preguntamos cuántas observaciones tienen un valor en específico o *menor a ese valor*.  
 
 <!-- Let's look at another variable in the NHANES dataset, called *SleepHrsNight* which records how many hours the participant reports sleeping on usual weekdays.  Let's create a frequency table as we did above, after removing anyone with missing data for this question.  Table \@ref(tab:sleepTable) shows a frequency table created as we did above, after removing anyone with missing data for this question. We can already begin to summarize the dataset just by looking at the table; for example, we can see that most people report sleeping between 6 and 8 hours. To see this even more clearly, we can plot a *histogram* which shows the number of cases having each of the different values; see left panel of Figure \@ref(fig:sleepHist). We can also plot the relative frequencies, which we will often refer to as *densities* - see the right panel of Figure \@ref(fig:sleepHist). -->
-Démosle un vistazo a otra variable en la base de datos NHANES, llamada *SleepHrsNight* que registra cuántas horas el participante reportó que duerme usualmente entre semana. Construyamos una tabla de frecuencias como la que hicimos arriba, después de quitar a las personas que tienen dato perdido en este pregunta. La tabla \@ref(tab:sleepTable) muestra una tabla de frecuencias creada como las de arriba, después de quitar a todas las personas que tuvieran datos perdidos para esta pregunta. Podemos comenzar a resumir los datos sólo con observar la tabla; por ejemplo, podemos ver que la mayoría de las personas reportan dormir entre 6 y 8 horas. Para ver esto de manera aún más clara, podemos graficar un *histograma* que nos muestre el número de casos que tuvieron cada uno de los valores; observa el panel izquierdo de la Figura \@ref(fig:sleepHist). También podemos graficar las frecuencias relativas, a las cuales frecuentemente llamaremos *densidades* - observa el panel derecho de la Figura \@ref(fig:sleepHist).
+Démosle un vistazo a otra variable en la base de datos NHANES, llamada *SleepHrsNight* que registra cuántas horas el participante reportó que duerme usualmente entre semana. Construyamos una tabla de frecuencias como la que hicimos arriba, después de quitar a las personas que tienen dato perdido en este pregunta. La Tabla \@ref(tab:sleepTable) muestra una tabla de frecuencias creada como las de arriba, después de quitar a todas las personas que tuvieran datos perdidos para esta pregunta. Podemos comenzar a resumir los datos sólo con observar la tabla; por ejemplo, podemos ver que la mayoría de las personas reportan dormir entre 6 y 8 horas. Para ver esto de manera aún más clara, podemos graficar un *histograma* que nos muestre el número de casos que tuvieron cada uno de los valores; observa el panel izquierdo de la Figura \@ref(fig:sleepHist). También podemos graficar las frecuencias relativas, a las cuales frecuentemente llamaremos *densidades* - observa el panel derecho de la Figura \@ref(fig:sleepHist).
 
 ```{r echo=FALSE}
 # create summary table for relative frequency of different
@@ -284,7 +284,7 @@ plot_grid(p1,p2)
 ```
 
 <!-- The variables that we examined above were fairly simple, having only a few possible values. Now let's look at a more complex variable: Age.  First let's plot the *Age* variable for all of the individuals in the NHANES dataset (see left panel of Figure \@ref(fig:ageHist)). What do you see there?  First, you should notice that the number of individuals in each age group is declining over time.  This makes sense because the population is being randomly sampled, and thus death over time leads to fewer people in the older age ranges.  Second, you probably notice a large spike in the graph at age 80.  What do you think that's about? -->
-Las variables que hemos examinado arriba eran bastante simples, pudiendo tener sólo unos pocos valores posibles. Ahora veamos una variable más compleja: Edad. Primero, grafiquemos la variable *Edad* para todos los individuos en la base de datos de NHANES (ve el panel izquierdo de la Figura \@ref(fig:ageHist)). ¿Qué ves ahí? Primero, deberías notar que el número de individuos en cada grupo de edad va disminuyendo con el tiempo. Esto tiene sentido porque la población fue muestreada aleatoriamente, y pasa que los fallecimientos a lo largo del tiempo lleva a que haya menos personas en los rangos de edad más avanzada. Segundo, probablemente notes un pico grande en la gráfica en la edad de 80 años. ¿Qué piensas que sea eso?
+Las variables que hemos examinado arriba eran bastante simples, pudiendo tener sólo unos pocos valores posibles. Ahora veamos una variable más compleja: Edad. Primero, grafiquemos la variable *Edad* para todos las personas en la base de datos de NHANES (ve el panel izquierdo de la Figura \@ref(fig:ageHist)). ¿Qué ves ahí? Primero, deberías notar que el número de personas en cada grupo de edad va disminuyendo con el tiempo. Esto tiene sentido porque la población fue muestreada aleatoriamente, y pasa que los fallecimientos a lo largo del tiempo lleva a que haya menos personas en los rangos de edad más avanzada. Segundo, probablemente notes un pico grande en la gráfica en la edad de 80 años. ¿Qué piensas que sea eso?
 
 <!-- If were were to look up the information about the NHANES dataset, we would see the following definition for the *Age* variable: "Age in years at screening of study participant. Note: Subjects 80 years or older were recorded as 80." The reason for this is that the relatively small number of individuals with very high ages would make it potentially easier to identify the specific person in the dataset if you knew their exact age;  researchers generally promise their participants to keep their identity confidential, and this is one of the things they can do to help protect their research subjects.  This also highlights the fact that it's always important to know where one's data have come from and how they have been processed; otherwise we might interpret them improperly, thinking that 80-year-olds had been somehow overrepresented in the sample. -->
 Si buscáramos la información acerca de la base de datos NHANES, veríamos la siguiente definición para la variable *Edad*: "Edad en años del participante al momento de su inclusión en la investigación. Nota: Participantes de 80 años o más fueron registrados como 80." La razón para esto es que la muestra relativamente pequeña de individuos con edades muy altas podría hacer potencialmente más fácil el poder identificar a las personas específicas en la base de datos si uno conoce su edad exacta; los investigadores generalmente prometen a sus participantes el mantener su identidad de manera confidencial, y esta es una de las cosas que se pueden hacer para ayudar a proteger a los participantes. Esto subraya el hecho de que siempre es importante conocer de dónde proviene la información que tenemos y conocer cómo ha sido procesada; de otra manera podríamos interpretar los datos de manera inapropiada, pensando que las personas de 80 años de edad hayan sido sobrerrepresentadas en la muestra de alguna manera.
@@ -477,7 +477,7 @@ Los ejemplos en la Figura \@ref(fig:NormalDistPlotsWithDist) siguen una distribu
 Un ejemplo de asimetría relativamente moderada se puede ver en el promedio de tiempos de espera en las líneas de seguridad aeropuertaria del Aeropuerto Internacional de San Francisco, graficado en el panel izquierdo de la Figura \@ref(fig:SFOWaitTimes). Puedes observar que mientras la mayoría de los tiempos son menores a 20 minutos, hay un número de casos donde pueden ser mucho mayores, ¡sobre los 60 minutos! Este es un ejemplo de una distribución "asimétrica a la derecha", donde la cola derecha es más larga que la izquierda; este tipo de asimetría es común cuando observamos conteos o tiempos medidos, que no pueden ser menores a cero. Es menos común ver distribuciones "asimétricas a la izquierda", pero pueden ocurrir, por ejemplo cuando vemos valores de fracciones que no pueden tomar valores mayores a uno.
 
 <!-- Examples of right-skewed and long-tailed distributions.  Left: Average wait times for security at SFO Terminal A (Jan-Oct 2017), obtained from https://awt.cbp.gov/ .  Right: A histogram of the number of Facebook friends amongst 3,663 individuals, obtained from the Stanford Large Network Database. The person with the maximum number of friends is indicated by the diamond. -->
-```{r SFOWaitTimes,echo=FALSE,fig.cap="Ejemplos de distribuciones asimétricas a la derecha y con cola larga. Izquierda: Tiempo promedio de espera en seguridad en el SFO Terminal A (Enero-Octubre 2017), obtenidos de https://awt.cbp.gov/ . Derecha: Histograma del número de amigos en Facebook entre 3,663 individuos, obtenidos de la Stanford Large Network Database. La persona con el máximo número de amigos está indicada con un diamante.",fig.width=8,fig.height=4,out.height='50%', message=FALSE,warning=FALSE}
+```{r SFOWaitTimes,echo=FALSE,fig.cap="Ejemplos de distribuciones asimétricas a la derecha y con cola larga. Izquierda: Tiempo promedio de espera en seguridad en el SFO Terminal A (Enero-Octubre 2017), obtenidos de https://awt.cbp.gov/ . Derecha: Histograma del número de amigos en Facebook en 3,663 personas, obtenidos de la Stanford Large Network Database. La persona con el máximo número de amigos está indicada con un diamante.",fig.width=8,fig.height=4,out.height='50%', message=FALSE,warning=FALSE}
 
 waittimes <- 
   read_csv("data/04/sfo_wait_times_2017.csv")
@@ -523,10 +523,10 @@ Distribuciones con cola larga han sido cada vez más reconocidas en el mundo rea
 > Porque al que tiene, le será dado, y tendrá más; y al que no tiene, aun lo que tiene le será quitado. - Mateo 25:29, Reina Valera 1960.
 
 <!-- This is often paraphrased as "the rich get richer".  In these situations, advantages compound, such that those with more friends have access to even more new friends, and those with more money have the ability to do things that increase their riches even more.  -->
-Esto frecuentemente es parafraseado como "los ricos se enriquecen más". En estas situaciones, las ventajas se combinan o multiplican, de tal manera que aquellos con más amigos tienen acceso aún a más amigos nuevos, y aquellos con más dinero tienen la habilidad de hacer cosas que incrementen sus riquezas aún más.
+Esto frecuentemente es parafraseado como "los ricos se enriquecen más" (o en el refrán "Dinero llama dinero"). En estas situaciones, las ventajas se combinan o multiplican, de tal manera que aquellos con más amigos tienen acceso aún a más amigos nuevos, y aquellos con más dinero tienen la habilidad de hacer cosas que incrementen sus riquezas aún más.
 
 <!-- As the course progresses we will see several examples of long-tailed distributions, and we should keep in mind that many of the tools in statistics can fail when faced with long-tailed data.  As Nassim Nicholas Taleb pointed out in his book "The Black Swan", such long-tailed distributions played a critical role in the 2008 financial crisis, because many of the financial models used by traders assumed that financial systems would follow the normal distribution, which they clearly did not. -->
-Conforme el curso avance veremos varios ejemplos de distribuciones de cola larga, y deberemos mantener en mente que muchas de las herramientas en estadística pueden fallar cuando nos enfrentamos con datos con cola larga. Como Nassim Nicholas Taleb señala en su libro "The Black Swan", estas distribuciones de cola larga jugaron un papel crítico en la crisis financiera de 2008, porque muchos de los modelos financieros usados por los *traders* (operadores de inversiones) asumieron que los sistemas financieros seguirían una distribución normal, que claramente no siguieron.
+Conforme el curso avance veremos varios ejemplos de distribuciones de cola larga, y deberemos mantener en mente que muchas de las herramientas en estadística pueden fallar cuando nos enfrentamos con datos con cola larga. Como Nassim Nicholas Taleb señala en su libro "*The Black Swan*", estas distribuciones de cola larga jugaron un papel crítico en la crisis financiera de 2008, porque muchos de los modelos financieros usados por los *traders* (operadores de inversiones) asumieron que los sistemas financieros seguirían una distribución normal, que claramente no siguieron.
 
 <!-- ## Learning objectives -->
 ## Objetivos de aprendizaje
@@ -544,5 +544,5 @@ Habiendo leído este capítulo, deberías ser capaz de:
 <!-- ## Suggested readings -->
 ## Lecturas sugeridas
 
-- *The Black Swan: The Impact of the Highly Improbable*, by Nassim Nicholas Taleb
+- *The Black Swan: The Impact of the Highly Improbable*, por Nassim Nicholas Taleb.
 
