--- a/16-PracticalExamples.Rmd
+++ b/16-PracticalExamples.Rmd
@@ -15,7 +15,7 @@ library(tidyverse)
 library(ggplot2)
 library(BayesFactor)
 library(emmeans)
-library(brms)
+#library(brms)
 library(cowplot)
 library(knitr)
 library(ggfortify)
